# consul-api-rs

./: Cargo.toml  README.md
src/: agent.rs  error.rs  keyvalue.rs  lib.rs
